@@ -3,6 +3,7 @@
 
 build/
 work/
+debugtest/
 
 *.h5
 *.n
